--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.12.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/respectedArivu/backendmarch.git"
+  },
+  "bugs": {
+    "url": "https://github.com/respectedArivu/backendmarch/issues"
+  },
+  "homepage": "https://github.com/respectedArivu/backendmarch#readme",
+  "description": ""
 }
