--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://arivu:<1234>@arivu.pfa4q.mongodb.net/?retryWrites=true&w=majority&appName=Arivu
+MONGO_URI=mongodb+srv://arivu:1234@arivu.pfa4q.mongodb.net/?retryWrites=true&w=majority&appName=Arivu
